# curriculum-learning

./: requirements.txt  setup.cfg
src/curriculum_learning/: logs.py
src/curriculum_learning/curriculum/: base_grid.py  logs.py  manager.py
src/curriculum_learning/specialist/: data.py  interface.py  logs.py  manager.py  metrics.py  model.py  sampling.py
