# Refers to: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for more options
[metadata]
name = curriculum_learning
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
#...
install_requires =
    setuptools
    wheel
    numpy
    pandas
    sklearn
    imbalanced-learn

[options.packages.find]
where = src
